--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Router"></activity>
+        <activity android:name=".AppliancesItem"></activity>
+        <activity android:name=".Appliances" />
+        <activity android:name=".NewRouter" />
+        <activity android:name=".Router" />
         <activity android:name=".Users" />
         <activity android:name=".BaseStation" />
         <activity android:name=".Dashboard" />
